Fixed spacing after icons.

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -74,7 +74,8 @@ body
 .img-logo
 	margin-top 30px
 	width 95%
-
+.space-right
+	margin-right 10px
 // generic stuff
 a
 	color color-light
@@ -251,8 +252,6 @@ button.btn
 	&.btn-comment
 		margin-right 15px
 		margin-bottom 15px
-	.fa
-		margin-right 10px
 
 .btn-group
 	.btn + .btn, .btn + .btn-group, .btn-group + .btn, .btn-group + .btn-group
